--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic-native/text-to-speech": "^5.5.1",
     "@ionic/angular": "^4.1.0",
+    "@ngrx/store": "^9.2.0",
     "cordova-android": "8.0.0",
     "cordova-plugin-camera": "4.0.3",
     "cordova-plugin-tts": "0.2.3",
     "core-js": "^2.5.4",
+    "faker": "^4.1.0",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.29"
@@ -44,6 +46,7 @@
     "@angular/compiler-cli": "~7.2.2",
     "@angular/language-service": "~7.2.2",
     "@ionic/angular-toolkit": "~1.5.1",
+    "@ngrx/store-devtools": "^9.2.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~10.14.2",
@@ -61,6 +64,7 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "node-sass": "^4.14.1",
     "protractor": "~5.4.0",
     "ts-node": "~8.1.0",
     "tslint": "~5.16.0",
