--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic-native/text-to-speech": "^5.5.1",
     "@ionic/angular": "^4.1.0",
+    "@ngrx/entity": "^9.2.0",
     "@ngrx/store": "^9.2.0",
     "cordova-android": "8.0.0",
     "cordova-plugin-camera": "4.0.3",
